// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render VerticalDivider 1`] = `
<View
  style={
    Object {
      "background": "rgba(202, 196, 208, 1)",
      "width": 0.5,
    }
  }
/>
`;

exports[`should render VerticalDivider with spacing of 10 pixels 1`] = `
<View
  style={
    Object {
      "background": "rgba(202, 196, 208, 1)",
      "marginHorizontal": 10,
      "width": 0.5,
    }
  }
/>
`;
